--- a/NaiveBayesAlgorithm/implementation.ipynb
+++ b/NaiveBayesAlgorithm/implementation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "       [5.9, 3. , 5.1, 1.8]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,17 +201,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.35, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,28 +223,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.98\n",
+      "Accuracy: 0.96\n",
       "Classification Report:               precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00        19\n",
-      "           1       1.00      0.92      0.96        13\n",
-      "           2       0.93      1.00      0.96        13\n",
+      "           1       0.94      0.94      0.94        17\n",
+      "           2       0.94      0.94      0.94        17\n",
       "\n",
-      "    accuracy                           0.98        45\n",
-      "   macro avg       0.98      0.97      0.97        45\n",
-      "weighted avg       0.98      0.98      0.98        45\n",
+      "    accuracy                           0.96        53\n",
+      "   macro avg       0.96      0.96      0.96        53\n",
+      "weighted avg       0.96      0.96      0.96        53\n",
       "\n",
       "Confusion Matrix:\n",
       " [[19  0  0]\n",
-      " [ 0 12  1]\n",
-      " [ 0  0 13]]\n"
+      " [ 0 16  1]\n",
+      " [ 0  1 16]]\n"
      ]
     }
    ],
@@ -260,10 +260,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello World\")"
+   ]
   },
   {
    "cell_type": "code",
